--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
   background-color: #222;
   height: 150px;
@@ -25,4 +16,58 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.side-pane {
+  width: 30%;
+  vertical-align: top;
+  padding: 10px;
+}
+
+.main-pane {
+  width: 70%;
+}
+
+.login {
+  width: 100%;
+  max-width: 700px;
+  height: 100%;
+  max-height: 300px;
+  background: white;
+  margin: 60px auto;
+}
+
+.form, .my-new {
+  z-index: 10000;
+  position: fixed;
+  background-color: rgba(200, 200, 200, 0.5);
+  height: 100%;
+  width: 100%;
+}
+
+.project {
+  border: #222222;
+}
+
+.my-float {
+  position: fixed;
+  bottom: 10%;
+  right: 10%;
+  border: none;
+  text-decoration: none;
+  background-color: red;
+  border-radius: 2500px;
+  color: white;
+  height: 50px;
+  width: 50px;
+}
+
+.my-norm {
+  border: none;
+  text-decoration: none;
+  background-color: red;
+  border-radius: 2500px;
+  color: white;
+  height: 50px;
+  width: 50px;
 }
