--- a/src/App.css
+++ b/src/App.css
@@ -71,3 +71,47 @@
   height: 50px;
   width: 50px;
 }
+
+.header {
+  height: 200px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+}
+
+li {
+  float: left;
+  width: 50%;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+
+.active {
+  background-color: #4CAF50;
+}
+
+.no-icon {
+  display: inline;
+}
+
+@media screen and (max-width: 800px){
+  .no-icon {display: none;}
+}
