--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 }
 
 .side-pane {
-  width: 30%;
+  width: 20%;
   vertical-align: top;
   padding: 10px;
 }
@@ -35,6 +35,7 @@
   max-height: 300px;
   background: white;
   margin: 60px auto;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .form, .my-new {
@@ -47,6 +48,9 @@
 
 .project {
   border: #222222;
+  float: left;
+  margin: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .my-float {
