--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,11 @@
 .side-pane {
   width: 20%;
   vertical-align: top;
-  padding: 10px;
+  padding: 30px;
 }
 
 .main-pane {
-  width: 70%;
+  /*width: 70%;*/
 }
 
 .login {
@@ -49,7 +49,7 @@
 .project {
   border: #222222;
   float: left;
-  margin: 30px;
+  margin: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
